<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023.
  ~ Developed by : Bigad Aboubakr
  ~ Developer website : http://bigad.me
  ~ Developer github : https://github.com/Scout4all
  ~ Developer Email : bigad@bigad.me
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <EditText
                android:id="@+id/reminderTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reminder_title"
                android:text="@={viewModel.dataItem.title}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/reminderDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/reminder_desc"
                android:lines="10"
                android:text="@={viewModel.dataItem.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reminderTitle" />

            <TextView
                android:id="@+id/selectLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_location"
                android:drawableLeft="@drawable/ic_location"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/reminder_location"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reminderDescription" />

            <TextView
                android:id="@+id/selectedLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:text="@{viewModel.dataItem.location}"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/selectLocation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/selectLocation"
                tools:text="Location" />


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fadeVisible="@{viewModel.showLoading.booleanValue()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/margin_normal"
            android:fadeVisible="@{!viewModel.showLoading.booleanValue()}"
            android:src="@drawable/ic_save"
            app:fabSize="normal"
            app:layout_anchorGravity="bottom|right|end" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
